--- a/Cpp_Generic_Design/Cpp_Generic_Design/Cpp_Generic_Design.vcxproj
+++ b/Cpp_Generic_Design/Cpp_Generic_Design/Cpp_Generic_Design.vcxproj
@@ -151,6 +151,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Generic_lib.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
