--- a/Cpp_Generic_Design/Cpp_Generic_Design/Cpp_Generic_Design.vcxproj.filters
+++ b/Cpp_Generic_Design/Cpp_Generic_Design/Cpp_Generic_Design.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Generic_lib.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
