--- a/Cpp_Generic_Design/Cpp_Generic_Design/Cpp_Generic_Design.vcxproj.filters
+++ b/Cpp_Generic_Design/Cpp_Generic_Design/Cpp_Generic_Design.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClCompile Include="Cpp_Generic_Design.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SmartPtr.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
